<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Road Base Indicator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="str_tv_distance_time">Distance</string>
    <string name="str_rb_driving">Bus</string>
    <string name="str_rb_bicycling">Bicycle</string>
    <string name="str_rb_walking">Walk</string>
    <string name="str_rb_car">car</string>
    <string name="str_rb_bike">Bike</string>
    <string name="str_btn_find">Find</string>
    <string name="hnt_et_location">Enter location</string>



        <string name="menu_settings">Settings</string>
   <string-array name="place_type">
        <item>airport</item>
        <item>amusement_park</item>
        <item>atm</item>
        <item>bank</item>
        <item>bus_station</item>
        <item>church</item>
        <item>doctor</item>
        <item>hospital</item>
        <item>mosque</item>
        <item>movie_theater</item>
        <item>hindu_temple</item>
        <item>restaurant</item>
        <item>school</item>
    </string-array>

    <string-array name="place_type_name">
        <item>Airport</item>
        <item>Amusement Park</item>
        <item>ATM</item>
        <item>Bank</item>
        <item>Bus Station</item>
        <item>Church</item>
        <item>Doctor</item>
        <item>Hospital</item>
        <item>Mosque</item>
        <item>Movie Theater</item>
        <item>Hindu Temple</item>
        <item>Restaurant</item>
        <item>School</item>
    </string-array>
    
</resources>
