<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
        android:background="@drawable/bg"
    >



    <LinearLayout
        android:layout_height="50dp"
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:orientation="horizontal"
             android:weightSum="1">

        <EditText
            android:id="@+id/textView"
            android:layout_width="184dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:hint="Enter Destination" />

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/kk"
            android:onClick="findLocation" />

        <Button
            android:id="@+id/adrs"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/more"
            android:onClick="findLocation" />

    </LinearLayout>
    <TextView
        android:id="@+id/tv_distance_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textSize="20dp"
        
     />

    <RadioGroup
        android:id="@+id/rg_modes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="horizontal"

        android:layout_below="@+id/tv_distance_time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton android:id="@+id/rb_driving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_rb_driving"
             android:checked="true" />

        <RadioButton android:id="@+id/rb_bicycling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_rb_bicycling"

            android:checked="false" />

        <RadioButton android:id="@+id/rb_walking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_rb_walking" />

        <RadioButton android:id="@+id/rb_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_rb_car" />



        <RadioButton android:id="@+id/rb_bike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_rb_bike" />


    </RadioGroup>

    <fragment
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.MapFragment"
    android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rg_modes" />

    <Button
        android:id="@+id/clear"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="clear" />

</RelativeLayout>
